SERVER-21863 Prevent map-reduce from inserting >16MB documents.